--- a/src/styles/Home.modules.css
+++ b/src/styles/Home.modules.css
@@ -9,6 +9,16 @@ body {
   height: 100vh;
 }
 
+.flex {
+  width: 100vw;
+  height: 100vh;
+
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  flex-wrap: wrap;
+}
+
 MainNavigation {
   z-index: 100;
 }
@@ -31,7 +41,7 @@ video {
 .video-overlay {
   width: 100vw;
   height: 100vh;
-  background-color: rgba(0, 0, 0, 0.5);
+  /* background-color: rgba(0, 0, 0, 0.5); */
   position: absolute;
   top: 0;
   right: 0;
