--- a/src/App.css
+++ b/src/App.css
@@ -27,7 +27,7 @@ video {
 .video-overlay {
   width: 100vw;
   height: 100vh;
-  background-color: rgba(0, 0, 0, 0.5);
+  /* background-color: rgba(0, 0, 0, 0); */
   position: absolute;
   top: 0;
   right: 0;
@@ -42,16 +42,21 @@ video {
 button {
   width: 80%;
   height: 10%;
-  background: transparent;
-  border: 2px solid white;
+  background-color: rgba(0,0,0,0.5);
+  border: 4px solid white;
   color: white;
   font-size: 150%;
+  font-weight: bold;
 }
 
 @media (max-width: 1524px) {
   video {
     width: auto;
     height: 100vh;
+  }
+
+  button {
+    background-color: rgba(0,0,0,0.5)
   }
 }
 
@@ -62,5 +67,6 @@ button {
 
   button {
     width: 50%;
+    background-color: rgba(0,0,0,0.5)
   }
 }
