--- a/src/styles/Card.modules.css
+++ b/src/styles/Card.modules.css
@@ -5,7 +5,7 @@
   border-radius: 10px;
   margin-left: 2%;
   margin-bottom: 2%;
-  background-color: #26001B;
+  background-color: rgba(0,0,0,0.5);
   z-index: 5;
   font-size: 130%;
 
@@ -19,7 +19,7 @@
 
 .img-card {
   width: 100%;
-  height: 50%vmin;
+  height: 50%;
   border-radius: 10px 10px 0 0;
 }
 
@@ -38,12 +38,12 @@
 h4.title {
   text-decoration: underline;
   font-size: 1.3rem;
-  color: #FF005C;
+  color: #B1CEF0;
 }
 
 p.price {
-  color: #810034;
-  background-color: #FFF600;
+  color: white;
+  background-color: rgba(0,0,0,0.5);;
   padding: 0.5rem 0.5rem;
   margin-top: 1rem;
   font-size: 1.5rem;
@@ -51,13 +51,14 @@ p.price {
   font-weight: bold;
 }
 
-@media (max-width:600px) {
+@media (max-width:700px) {
   .card {
     font-size: 110%;
+    width: 100%;
   }
 }
 
-@media (min-width:601px) {
+@media (min-width:701px) {
   .card {
     font-size: 130%;
   }
