--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,51 @@ body {
   height: 100vh;
 }
 
+div.flex {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 1rem;
+  z-index: 100;
+}
+
+input {
+  font-size: 150% !important;
+  width: 90%;
+  height: 3rem;
+  opacity: 0.5;
+  text-align: center;
+}
+
+div.loader {
+  border: 16px solid #ffffff; /* Light grey */
+  border-top: 16px solid #1C5A7E; /* Blue */
+  border-radius: 50%;
+  width: 120px;
+  height: 120px;
+  animation: spin 2s linear infinite;
+  align-self: center;
+  justify-self: center;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
+h1.thanks {
+  color: #ffffff;
+  text-align: center;
+}
+
+button {
+  font-size: 200% !important;
+  width: 90% !important;
+  height: 3rem;
+  background-color: rgba(0, 0, 0, 0.5) !important;
+}
+
 video {
   position: fixed;
   top: 0;
@@ -27,7 +72,7 @@ video {
 .video-overlay {
   width: 100vw;
   height: 100vh;
-  /* background-color: rgba(0, 0, 0, 0); */
+  background-color: rgba(0, 0, 0, 0.8);
   position: absolute;
   top: 0;
   right: 0;
@@ -37,6 +82,7 @@ video {
   display: flex;
   justify-content: center;
   align-items: center;
+  z-index: -1;
 }
 
 button {
