--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,7 @@
 body {
   width: 100vw;
   height: 100vh;
+  z-index: 0 !important;
 }
 
 div.flex {
@@ -52,6 +53,7 @@ button {
   width: 90% !important;
   height: 3rem;
   background-color: rgba(0, 0, 0, 0.5) !important;
+  z-index: 100 !important;
 }
 
 video {
