--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,7 @@ body {
 
 div.flex {
   width: 100vw;
-  height: 120vh;
+  height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -51,9 +51,9 @@ h1.thanks {
 }
 
 button {
-  font-size: 200% !important;
+  font-size: 150% !important;
   width: 90% !important;
-  height: 3rem;
+  height: 3rem !important;
   background-color: rgba(0, 0, 0, 0.5) !important;
   z-index: 100 !important;
   min-height: 20%;
