--- a/src/App.css
+++ b/src/App.css
@@ -14,10 +14,9 @@ div.flex {
   width: 100vw;
   height: 100vh;
   display: flex;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: center;
   flex-direction: column;
-  flex-wrap: wrap;
   gap: 1rem;
   z-index: 100;
 }
